# soniox_windows

./: .gitignore  Cargo.toml  README.md  build.rs  dist-workspace.toml  soniox.toml.examples
.github/workflows/: release.yml  rust.yml
src/: app.rs  audio.rs  errors.rs  gui.rs  lib.rs  main.rs  settings.rs  soniox.rs  stream.rs  types.rs  utils_windows.rs  wav.rs  windows.rs
src/audio/: capture.rs  mod.rs
src/gui/: app.rs  color.rs  draw.rs  font.rs  mod.rs  replicas.rs  settings.rs  state.rs  text.rs  utils.rs
src/soniox/: action.rs  client.rs  connection.rs  mod.rs  render.rs  replicas.rs  request.rs  session.rs  state.rs  store.rs  stream.rs  transcription.rs  utils.rs  worker.rs
src/transcription/: audio.rs  mod.rs  replicas.rs  service.rs  store.rs  utils.rs
src/types/: audio.rs  events.rs  languages.rs  mod.rs  offset.rs  settings.rs  soniox.rs  subtitles.rs
src/windows/: audio.rs  mod.rs  utils.rs  wrapper.rs
