[package]
name = "soniox_windows"
version = "0.3.2"
edition = "2024"
repository = "https://github.com/eoftgge/soniox_windows"
rust-version = "1.89.0"

[dependencies]
wasapi = "0.20.0"
thiserror = "2.0.16"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3.31"
egui = "0.33.0"
eframe = { version = "0.33.0", features = ["glow"] }
windows = { version = "0.62.0", features = ["Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6.2"
log = "0.4.28"
config = "0.15.15"
log4rs = "1.4.0"
bytemuck = "1.24.0"

[profile.release]
lto = "thin"
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"
lto = "thin"
