[package]
name = "soniox_windows"
version = "0.6.0"
edition = "2024"
repository = "https://github.com/eoftgge/soniox_windows"
rust-version = "1.89.0"

[dependencies]
wasapi = "0.22.0"
thiserror = "2.0.16"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3.31"
eframe = { version = "0.33.2", features = ["glow"] }
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
tracing-appender = "0.2.4"
config = "0.15.19"
bytemuck = "1.24.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
