[package]
name = "soniox_live"
version = "1.5.0"
edition = "2024"
repository = "https://github.com/eoftgge/soniox_live"
rust-version = "1.89.0"

[dependencies]
thiserror = "2.0.18"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3.31"
eframe = { version = "0.33.3", features = ["glow"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
tracing-appender = "0.2.4"
toml = "1.0.0"
egui-notify = "0.21.0"
cpal = "0.17.1"
bytemuck = "1.25.0"

[build-dependencies]
winres = "0.1.12"
image = "0.25.9"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"